# c-mesh-api

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/platform/: CMakeLists.txt
lib/platform/linux/: CMakeLists.txt  logger.c
lib/platform/macos/: CMakeLists.txt  makefile  platform.c  serial_macos.c
lib/platform/win32/: logger.c  platform.c  winserial.c
lib/wpc/: CMakeLists.txt
lib/wpc/reassembly/: reassembly.c
test/: CMakeLists.txt
